# delf-rs

./: Cargo.toml  LICENSE  README.md  search-index.js  settings.html  source-files.js
.github/workflows/: docs.yml
delf/: all.html  fn.check_short_ttl_loop.html  fn.init_api.html  fn.read_files.html  fn.read_yamls.html  index.html  sidebar-items.js  struct.DelfYamls.html
delf/api/: fn.delete_edge.html  fn.delete_object.html  fn.rocket_route_fn_delete_edge.html  fn.rocket_route_fn_delete_object.html  index.html  sidebar-items.js  static.static_rocket_route_info_for_delete_edge.html  static.static_rocket_route_info_for_delete_object.html
delf/graph/: index.html  sidebar-items.js  struct.DelfGraph.html
delf/graph/edge/: enum.DeleteType.html  index.html  sidebar-items.js  struct.DelfEdge.html  struct.ToType.html
delf/graph/object/: enum.DeleteType.html  index.html  sidebar-items.js  struct.DelfObject.html
delf/storage/: fn.get_connection.html  index.html  sidebar-items.js  trait.DelfStorageConnection.html
examples/hotcrp/: Cargo.toml  config.yaml  main.rs  schema.yaml  schema_errors.yaml
examples/hotcrp/src/: config.yaml  main.rs  schema.yaml
examples/photo/: Cargo.toml  main.rs
examples/photo/src/: main.rs  scratch.yaml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
lib/: Cargo.toml
lib/src/: graph.rs  lib.rs  schema.yaml
src/: lib.rs  main.rs
src/api/: mod.rs
src/delf/: lib.rs.html
src/graph/: edge.rs  mod.rs  object.rs
src/storage/: diesel.rs  mod.rs
(+16 files in other folders)
