[package]
name = "delf"
version = "0.1.0"
authors = ["mcmcgrath13 <m.c.mcgrath13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
clap = "3.0.0-beta.2"
diesel = { version = "1.4", features = ["mysql"] }
diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel" }
petgraph = "0.5"
rocket = "0.4.6"
yaml-rust = "0.4"
